--- a/index.html
+++ b/index.html
@@ -197,8 +197,8 @@
             <p class="card_text">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quasi, illum aliquam placeat at molestiae laboriosam alias modi voluptatem sapiente quod aliquid soluta. Exercitationem nulla iure ratione ea illum consequatur dolorem!</p>
             <p class="card_text">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quasi, illum aliquam placeat at molestiae laboriosam alias modi voluptatem sapiente quod aliquid soluta. Exercitationem nulla iure ratione ea illum consequatur dolorem!</p>
             <div class="buttons">
-              <a href="#" class="button button--primary">Demo</a>
-              <a href="#" class="button button--ghost">Code</a>
+              <a href="https://carloshermit.github.io/portafolio/" target="_blank" class="button button--primary">Demo</a>
+              <a href="https://github.com/carloshermit/portafolio" target="_blank" class="button button--ghost">Code</a>
             </div>
           </div>
         </article>
