--- a/index.html
+++ b/index.html
@@ -22,14 +22,14 @@
           class="toggle-theme_text">Dark Mode</p>
         </div>
       </div>
-      <div class="flags" id="flags">
+      <!-- <div class="flags" id="flags">
           <div class="flags_item" data-language="es">
             <img src="assets//icons//es.svg" class="flags_img" alt="">
           </div>
           <div class="flags_item" data-language="en">
             <img src="assets//icons//gb.svg" class="flags_img" alt="">
           </div>
-      </div>
+      </div> -->
       <div id="toggle-colors" class="colors">
         <div data-color="hsl(214, 84%, 56%)" class="colors_item colors_item--blue"></div>
         <div data-color="hsl(150, 84%, 56%)" class="colors_item colors_item--green"></div>
@@ -46,7 +46,7 @@
           </div>
           <div class="card_header">
             <h2 class="card_title no-margin">Ingeniero de sistemas</h2>
-            <p class="card_subtitle" data-section="profile" data-value="rol">Front end developer</p>
+            <p class="card_subtitle" data-section="profile" data-value="rol">Developer</p>
           </div>
           <div class="card_body">
             <div class="card_link">
@@ -62,7 +62,7 @@
             </p>
           </div>
         </article>
-        <article class="card card--experience">
+        <!-- <article class="card card--experience">
           <h2 class="card_title">Experiencies</h2>
           <div class="experience">
             <img src="assets/images/logo.png" alt="logo" class="experience_image">
@@ -99,16 +99,16 @@
                 Lorem ipsum dolor sit amet consectetur adipisicing elit. Et voluptatibus quam veniam numquam. Aliquid dignissimos necessitatibus molestiae, corrupti quas harum ut quidem illo officia! Neque doloribus esse commodi iusto molestiae!
               </p>
             </div>
-          </div>
+          </div> -->
         </article>
         <article class="card card--hobbies">
           <h2 class="card_title">Hobbies</h2>
           <div class="card_image--container">
-            <img src="assets/images/hobbie.jpg" alt="Man on a Bike">
+            <img src="assets/images/hobbies.webp" alt="Man on a Bike">
           </div>
-          <h3 class="hobbie_title">Biking</h3>
+          <h3 class="hobbie_title">Videojuegos y Fútbol</h3>
           <p class="card_text">
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Ratione illo voluptate reiciendis doloremque, cum quas error inventore facilis eaque aliquid rerum sint recusandae laudantium debitis earum ullam consequatur ab impedit.
+            Me gusta bastante los videojuegos y el fútbol, practíco este deporte casi todos los fines de semana.
           </p>
         </article>
       </section>
@@ -131,6 +131,14 @@
             </div>
             <div class="skills_item">
               <p class="skills_tech">JAVASCRIPT</p>
+              <div class="skills_bar skills_bar--30"></div>
+            </div>
+            <div class="skills_item">
+              <p class="skills_tech">BOOTSTRAP</p>
+              <div class="skills_bar skills_bar--30"></div>
+            </div>
+            <div class="skills_item">
+              <p class="skills_tech">ANGULAR</p>
               <div class="skills_bar skills_bar--30"></div>
             </div>
           </div>
@@ -184,7 +192,50 @@
         </article>
         <article class="card card--project">
           <div class="card_image-container">
-            <img src="assets/images/project.jpg" alt="Landing page" class="card_image">
+            <img src="assets/images/api-java.PNG" alt="Landing page" class="card_image">
+          </div>
+          <div class="project">
+            <div class="project_tags">
+              <span class="project_tag">#JAVA</span>
+              <span class="project_tag">#SPRINGBOOT</span>
+              <span class="project_tag">#MYSQL</span>
+              <span class="project_tag">#SPRINGDATAJPA</span>
+              <span class="project_tag">#AWS</span>
+            </div>
+            <div class="card_title">API EN JAVA SPRING BOOT</div>
+            <p class="card_text">Api REST creada en java spring boot donde aprendí el manejo de los metodos get, post, put y delete. Además el uso de spring data JPA usando la base de datos MySQL.</p>
+            <p class="card_text">Esta aplicación permite registrar, listar, actualizar, y eliminar productos. Así como seleccionar su respectiva categoria y unidad.</p>
+            <p class="card_text">El proyecto está desplegado en amazon web services(AWS) en Elastic Beanstalk, y la base de datos en AWS RDS.</p>
+            <div class="buttons">
+              <a href="https://inventario.carlosflores.tech/api/products/read/" target="_blank" class="button button--primary">Demo</a>
+              <a href="https://github.com/carloshermit/inventario" target="_blank" class="button button--ghost">Code</a>
+            </div>
+          </div>
+        </article>
+        <article class="card card--project">
+          <div class="card_image-container">
+            <img src="assets/images/front-crud-angular.PNG" alt="Landing page" class="card_image">
+          </div>
+          <div class="project">
+            <div class="project_tags">
+              <span class="project_tag">#ANGULAR</span>
+              <span class="project_tag">#BOOTSRTAP</span>
+              <span class="project_tag">#TYPESCRIPT</span>
+              <span class="project_tag">#RESPONSIVE</span>
+            </div>
+            <div class="card_title">FRONT END EN ANGULAR</div>
+            <p class="card_text">Proyecto creado en angular y con boostrap en el cual aprendí el uso de componentes, los servicios y las rutas, el uso de HttpClient y Router y traer los datos de mi API creada en Spring Boot</p>
+            <p class="card_text">Esta aplicación permite registrar, listar, actualizar, y eliminar productos. Así como seleccionar su respectiva categoria y unidad.</p>
+            <p class="card_text">Finalmente esta desplegado en Firebase y consume mi api de spring boot</p>
+            <div class="buttons">
+              <a href="https://inventariofront.web.app/"  target="_blank" class="button button--primary">Demo</a>
+              <a href="https://github.com/carloshermit/inventarioFront" target="_blank" class="button button--ghost">Code</a>
+            </div>
+          </div>
+        </article>
+        <article class="card card--project">
+          <div class="card_image-container">
+            <img src="assets/images/portafolio-page2.PNG" alt="Landing page" class="card_image">
           </div>
           <div class="project">
             <div class="project_tags">
@@ -193,52 +244,11 @@
               <span class="project_tag">#JAVASCRIPT</span>
               <span class="project_tag">#RESPONSIVE</span>
             </div>
-            <div class="card_title">Landing page</div>
-            <p class="card_text">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quasi, illum aliquam placeat at molestiae laboriosam alias modi voluptatem sapiente quod aliquid soluta. Exercitationem nulla iure ratione ea illum consequatur dolorem!</p>
-            <p class="card_text">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quasi, illum aliquam placeat at molestiae laboriosam alias modi voluptatem sapiente quod aliquid soluta. Exercitationem nulla iure ratione ea illum consequatur dolorem!</p>
+            <div class="card_title">Mi portafolio</div>
+            <p class="card_text">En la creación de mi portafolio reforce mis conocimientos en html, css y java script, con la creación de tema oscuro, transicion para el cambio de color y media querys para adaptar el contenido a cualquier dispositivo.</p>
             <div class="buttons">
               <a href="https://carloshermit.github.io/portafolio/" target="_blank" class="button button--primary">Demo</a>
               <a href="https://github.com/carloshermit/portafolio" target="_blank" class="button button--ghost">Code</a>
-            </div>
-          </div>
-        </article>
-        <article class="card card--project">
-          <div class="card_image-container">
-            <img src="assets/images/project.jpg" alt="Landing page" class="card_image">
-          </div>
-          <div class="project">
-            <div class="project_tags">
-              <span class="project_tag">#HTML</span>
-              <span class="project_tag">#CSS</span>
-              <span class="project_tag">#JAVASCRIPT</span>
-              <span class="project_tag">#RESPONSIVE</span>
-            </div>
-            <div class="card_title">Landing page</div>
-            <p class="card_text">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quasi, illum aliquam placeat at molestiae laboriosam alias modi voluptatem sapiente quod aliquid soluta. Exercitationem nulla iure ratione ea illum consequatur dolorem!</p>
-            <p class="card_text">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quasi, illum aliquam placeat at molestiae laboriosam alias modi voluptatem sapiente quod aliquid soluta. Exercitationem nulla iure ratione ea illum consequatur dolorem!</p>
-            <div class="buttons">
-              <a href="#" class="button button--primary">Demo</a>
-              <a href="#" class="button button--ghost">Code</a>
-            </div>
-          </div>
-        </article>
-        <article class="card card--project">
-          <div class="card_image-container">
-            <img src="assets/images/project.jpg" alt="Landing page" class="card_image">
-          </div>
-          <div class="project">
-            <div class="project_tags">
-              <span class="project_tag">#HTML</span>
-              <span class="project_tag">#CSS</span>
-              <span class="project_tag">#JAVASCRIPT</span>
-              <span class="project_tag">#RESPONSIVE</span>
-            </div>
-            <div class="card_title">Landing page</div>
-            <p class="card_text">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quasi, illum aliquam placeat at molestiae laboriosam alias modi voluptatem sapiente quod aliquid soluta. Exercitationem nulla iure ratione ea illum consequatur dolorem!</p>
-            <p class="card_text">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quasi, illum aliquam placeat at molestiae laboriosam alias modi voluptatem sapiente quod aliquid soluta. Exercitationem nulla iure ratione ea illum consequatur dolorem!</p>
-            <div class="buttons">
-              <a href="#" class="button button--primary">Demo</a>
-              <a href="#" class="button button--ghost">Code</a>
             </div>
           </div>
         </article>
